# gamelib

./: .gitignore  .gitmodules  BUILD  CMakeLists.txt  build.py
include/: context.h  def.h
src/: CMakeLists.txt  context.cc
src/internal-header/: CMakeLists.txt  internal_context.h
test/: CMakeLists.txt  main_test.cc
tools/: build_3rd.py  exec_test.py  fresh_build.py
